Fix most recent spacing

--- a/styles.1.0.3.css
+++ b/styles.1.0.3.css
@@ -229,8 +229,8 @@ hr {
 		margin-top: 10px;
 	}
 	.most-recent {
-		width: 100%;
-		margin-left: 5%;
+		width: 95%;
+		padding-left: 5%;
 		font-size: 100%;
 	}
 	.video {
